[workspace]
members = ["packages/segmenter-utils"]
resolver = "2"

# let's use `cargo-run-bin` while there is no built-in solution for
# https://github.com/rust-lang/cargo/issues/2267
[workspace.metadata.bin]
wasm-bindgen-cli = { version = "0.2.92", locked = true, bins = ["wasm-bindgen"] }

[profile.release]
incremental = true
codegen-units = 1
lto = true
strip = true
opt-level = 3
