[workspace]
members = ["packages/segmenter-utils"]
resolver = "2"

# let's use `cargo-run-bin` while there is no built-in solution for
# https://github.com/rust-lang/cargo/issues/2267
[workspace.metadata.bin]
cargo-binstall = { version = "1.15.6", locked = true }
cargo-watch = { version = "8.5.3", locked = true, bins = ["cargo-watch"] }
wasm-bindgen-cli = { version = "=0.2.101", locked = true, bins = ["wasm-bindgen"] } # 0.2.102+ sometimes reorders imports, resulting in a different hash

[profile.release]
incremental = true
codegen-units = 1
lto = true
strip = true
opt-level = 3
